<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity"
    android:orientation="vertical"
    android:fillViewport="false"
    android:background="@drawable/back">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/welcomeStr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_str"
            android:textSize="60sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/welcomeStr"
            android:padding="40dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_str"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:maxLines="1"/>
            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_str"
                android:inputType="number"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:maxLines="1"
                android:maxLength="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/maleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_str"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/femaleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
            </LinearLayout>
            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_str"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tays_str"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_str"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="200"
                android:maxLines="4"
                android:lines="4"
                android:scrollbars="vertical"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:gravity="top"/>

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_png"
                android:contentDescription="@string/yourimg_str"/>

            <Button
                android:id="@+id/uploadImageBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/uploadimg_str"
                android:layout_gravity="center"
                android:background="@drawable/signup_button"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cys_str"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/basketballLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/basketballCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/basketball_str"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/basketballSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/soccerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/soccerCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/soccer_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/soccerSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tennisLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/tennisCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tennis_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/tennisSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/footballLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/footballCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/football_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/footballSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/volleyballLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/volleyballCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/volleyball_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/volleyballSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/runningLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/runningCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/running_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/runningSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baseballLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/baseballCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/baseball_str"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"/>
                <Spinner
                    android:id="@+id/baseballSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/continueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_str"
                android:background="@drawable/login_button"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>