<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posttitle_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/postTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterposttitle_str"
                android:background="@drawable/frame"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postdescription_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/postDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterpostdescription_str"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="20"
                android:lines="20"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/confirmPostBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_str"
                android:background="@drawable/login_button"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"/>
            <Button
                android:id="@+id/cancelPostBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_str"
                android:background="@drawable/signup_button"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"/>
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/addPostProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressDrawable="@xml/circular_progress_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:theme="@style/AppTheme.WhiteAccent"/>
</RelativeLayout>