<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendMessageActivity"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:fillViewport="false"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/messageTitleStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messagetitle_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_below="@id/messageTitleStr"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/messageTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entermessagetitle_str"
                android:background="@drawable/frame"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/messageDescriptionStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messagedescription_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/messageTitleLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_below="@id/messageDescriptionStr"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/messageDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entermessagedescription_str"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="20"
                android:lines="20"
                android:background="@drawable/frame"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@color/white"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/contactInfoStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactinfo_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/messageDescriptionLayout"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/fillStr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_str"
            android:textColor="@color/white"
            android:layout_below="@id/contactInfoStr"/>

        <LinearLayout
            android:id="@+id/messageEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fillStr"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_below="@id/messageTitleStr"
                app:hintEnabled="false"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/messageEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entermessageemail_str"
                    android:background="@drawable/frame"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/messagePhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageEmailLayout"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:layout_below="@id/messageTitleStr"
                app:hintEnabled="false"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/messagePhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entermessagephone_str"
                    android:background="@drawable/frame"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/messagePhoneLayout">
            <Button
                android:id="@+id/confirmMessageBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_str"
                android:background="@drawable/login_button"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"/>
            <Button
                android:id="@+id/cancelMessageBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_str"
                android:background="@drawable/signup_button"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/sendMessageProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressDrawable="@xml/circular_progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:theme="@style/AppTheme.WhiteAccent"/>
    </RelativeLayout>
</ScrollView>